@startuml er_diagram
' ІПСО Детектор — ER-діаграма (Entity-Relationship)

skinparam entity {
    BackgroundColor #E3F2FD
    BorderColor #1565C0
}

title ER-діаграма — Інфологічна модель бази даних IPSO Detector

entity "AnalysisResult" as AR {
    * **id** : integer <<PK>>
    --
    * original_text : text
    detected_language : varchar(10)
    translated_text : text
    * source : varchar(50) {telegram|api|web}
    --
    narrative_score : float [0.0–1.0]
    rhetoric_score : float [0.0–1.0]
    similarity_score : float [0.0–1.0]
    * final_score : float [0.0–1.0]
    --
    * verdict : varchar(20) {safe|suspicious|ipso}
    detected_narratives : jsonb
    detected_rhetoric : jsonb
    similar_narratives : jsonb
    --
    processing_time_ms : integer
    * created_at : timestamp
}

entity "TelegramAnalysis" as TA {
    * **id** : integer <<PK>>
    --
    * **result_id** : integer <<FK>>
    * chat_id : bigint
    * message_id : bigint
    username : varchar(100)
    * created_at : timestamp
}

entity "Feedback" as FB {
    * **id** : integer <<PK>>
    --
    * **result_id** : integer <<FK>>
    * feedback_type : varchar(10) {correct|wrong}
    chat_id : bigint
    * created_at : timestamp
}

entity "KnownNarrative" as KN {
    * **id** : integer <<PK>>
    --
    * title : varchar(200)
    * description : text
    * category : varchar(30)
    example_texts : jsonb
    embedding : jsonb [vector 384d]
    source : varchar(100)
    * is_active : boolean
    * created_at : timestamp
}

' === Зв'язки ===

AR ||--o| TA : "1:0..1\nresult_id"
AR ||--o{ FB : "1:0..*\nresult_id"

note bottom of KN
    Зв'язок з AnalysisResult —
    **семантичний** (cosine similarity),
    не реляційний (FK).
    Результат порівняння зберігається
    у полі similar_narratives (jsonb).
end note

note right of AR
    **Категорії наративів у detected_narratives:**
    - demoralization
    - distrust_institutions
    - false_equivalence
    - panic_fear
    - military_losses_exaggeration
    - western_abandonment
    - corruption_accusation
end note

note right of KN
    **Категорії (category):**
    - demoralization (Деморалізація)
    - distrust (Підрив довіри)
    - false_equivalence (Хибна рівність)
    - panic (Паніка та страх)
    - corruption (Корупція)
    - military_losses (Втрати ЗСУ)
    - western_abandonment (Захід зраджує)
    - other (Інше)
end note

@enduml
